Fix blurb text alignment

--- a/_source/css/main.css
+++ b/_source/css/main.css
@@ -94,6 +94,10 @@ a:hover {
     article p {
         text-align: justify;
     }
+
+    #blurb p {
+        text-align: inherit;
+    }
 }
 
 #blurb {
